# zagreb

./: README.md
class/: CMakeLists.txt  package.xml
class/scripts/: Ejemplo.py  angle_detector.py
faceDetection/: CMakeLists.txt
lab2_0036572676/: CMakeLists.txt  package.xml
lab2_0036572676/bags/: Prueba_2024-10-29-11-43-21.bag  chase_second_t_2024-10-28-10-53-45.bag  chase_second_turtle_2024-10-25-18-25-21.bag
lab2_0036572676/launch/: chase_mouse.launch  chase_second_turtle.launch
lab2_0036572676/scripts/: turtle_chaser_controller_node.py  turtle_mouse_node.py
lab3_0036572676/: CMakeLists.txt  package.xml
lab3_0036572676/bags/: chase_mouse_2024-10-25-18-21-16_processed.bag  chase_second_turtle_2024-10-25-18-25-21_processed.bag  stage_exploration_2024-11-15-18-00-06.bag
lab3_0036572676/msg/: ChaserStatus.msg
lab3_0036572676/rviz/: lab3.rviz  lab3_stage.rviz  task3.rviz
lab3_0036572676/scripts/: laserscan_to_points.py  laserscan_to_points_task3.py  process_turtle_chase.py  trajectory_visualization.py
lab5/: CMakeLists.txt  package.xml
lab5/launch/: rui_bartolome.launch
lab5/src/: call_services.py  lawnmover.cpp  main.cpp
node_programming/: CMakeLists.txt  package.xml
node_programming/include/node_programming/: turtle_lawnmover.hpp
node_programming/src/: main.cpp  turtle_lawnmover.cpp
rps_tf2_tutorial/: CMakeLists.txt  README.md  package.xml
rps_tf2_tutorial/scripts/: closest_obstacle.py
rui_bartolomesegura/: CMakeLists.txt  Makefile  package.xml
rui_bartolomesegura/src/: Makefile  rui_bartolomesegura.cpp
turtle_game/: CMakeLists.txt  package.xml
turtle_game/config/: PI.yaml
turtle_game/include/: turtle_target.h
turtle_game/launch/: start.launch
turtle_game/src/: turtle_game.cpp  turtle_target.cpp
turtle_thief_0036572676/: CMakeLists.txt  package.xml
turtle_thief_0036572676/bag/: exam-points.bag
turtle_thief_0036572676/launch/: chase_thief.launch
turtle_thief_0036572676/scripts/: fix_points.py  turtle_thief_node.py
turtlecontrol/: CMakeLists.txt  package.xml
turtlecontrol/launch/: color.launch  test.launch  (+1 more)
(+15 files in other folders)
